# si2026-test-generator-kaylee

./: .gitignore  README.md  ROADMAP.md  app.py  pyproject.toml  server.py
docs/superpowers/specs/: 2026-07-21-p7-finalized-sf1449-design.md
static/: app.js  index.html  styles.css
testgen/: __init__.py  __main__.py  cli.py  core.py  fields.py  fillable.py  formfill.py  infer.py  pdf.py  presets.py  schedule.py  writers.py
tests/: test_api.py  test_pdf.py  test_smoke.py
