[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testgen"
version = "0.1.0"
description = "Generate realistic, reproducible fake test data (CSV, SQL, and PDFs)."
readme = "README.md"
requires-python = ">=3.9"
# Runtime dependencies get added as tickets need them (Faker in Ticket 2,
# a PDF library in Ticket 5). Kept empty for the scaffold so install is instant.
dependencies = []

# This line is what turns `testgen` into a real terminal command after
# `pip install .`. It says: when someone runs `testgen`, call the main()
# function in testgen/cli.py.
[project.scripts]
testgen = "testgen.cli:main"

[tool.setuptools.packages.find]
include = ["testgen*"]
