[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testgen"
version = "0.1.0"
description = "Generate realistic, reproducible fake test data (CSV, SQL, and PDFs)."
readme = "README.md"
requires-python = ">=3.9"
# Runtime dependencies. Faker generates the individual realistic values
# (names, companies, addresses); it is seedable, which keeps our output
# reproducible. fpdf2 is a small, pure-Python PDF library; it is a core (not
# optional) dependency because producing realistic sample PDFs is a core purpose
# of this tool, not an add-on.
dependencies = ["Faker", "fpdf2", "pypdf", "reportlab"]

# Optional extras. These are NOT installed by a plain `pip install .`; you opt
# in by name. The `web` group holds everything the Fixtura web front door needs
# (a FastAPI server), so the core engine stays lightweight for people who only
# want the library or CLI.
#   pip install ".[web]"   installs testgen + FastAPI + a server to run Fixtura.
[project.optional-dependencies]
web = ["fastapi", "uvicorn[standard]", "httpx"]

# This line is what turns `testgen` into a real terminal command after
# `pip install .`. It says: when someone runs `testgen`, call the main()
# function in testgen/cli.py.
[project.scripts]
testgen = "testgen.cli:main"

[tool.setuptools.packages.find]
include = ["testgen*"]

# Ship the blank government forms (public-domain federal forms) that formfill.py
# fills; without this they'd be left out of an installed package.
[tool.setuptools.package-data]
testgen = ["forms/*.pdf"]
